<resources>
    <string name="app_name">Bus Portal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="bus_portal_msg">bus_portal</string>
    <string name="references_msg">References</string>
    <string name="news_msg">news</string>
    <string name="time1_msg">time1</string>
    <string name="availability1_msg">availability</string>
    <string name="time2_msg">time2</string>
    <string name="time3_msg">time3</string>
    <string name="availability2_msg">availability</string>
    <string name="availability3_msg">availability</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="todo">TODO</string>
    <string name="todo2">todo</string>
    <string name="password2">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="todo3">TODO</string>
    <string name="hello">Hello</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_e_mail_below">Enter your E-mail below</string>
    <string name="email3">Email</string>
    <string name="send_mail">Send mail</string>
    <string name="check_your_email_for_verification">Check your Email for verification</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="_5_30">5:30</string>
    <string name="_3_30">3:30</string>
    <string name="book">Book</string>
    <string name="_4_30">4:30</string>
    <string name="check_in_my_bookings">Check in My Bookings</string>
    <string name="click_here_to_check">Click here to check</string>
    <string name="proceed_to_my_bookings_to_check_your_ride">Proceed to My Bookings to check your ride</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="check_location">Check Location</string>
    <string name="route_at_3_30_1_2_3"><![CDATA[Route at 3:30 -- 1->2->3]]></string>
    <string name="route_at_4_30_2_3_1"><![CDATA[Route at 4:30 -- 2->3->1]]></string>
    <string name="route_at_5_30_2_1_3"><![CDATA[Route at 5:30 -- 2->1->3]]></string>
</resources>
